--- a/library.properties
+++ b/library.properties
@@ -7,3 +7,4 @@ paragraph=C++ library for the Arduino IDE that helps interface with pushbuttons 
 category=Signal Input/Output
 url=https://github.com/pololu/pushbutton-arduino
 architectures=*
+license=MIT
